--- a/sqlapp/Pages/Index.cshtml
+++ b/sqlapp/Pages/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">This is a list of Products</h1>
+    <h1 class="display-4">This is a list of Products - Running as Docker image</h1>
     <h2>Change works</h2>
     <table class="table table-bordered">
         <thead>
